# diplomado-UAQ

./: pyproject.toml
.github/instructions/: python.instructions.md
semana 2/: EAS.py
semana 4/: lienal.ipynb  logistica.ipynb  lr.py
semana 5/: ROC_29032025_hw.py  kmean.ipynb  logic.ipynb  utils.py
semana 6/: Practica_regresionLineal.py  Practica_regresionLogistica.py  main.py
