[project]
name = "diplomado-uaq"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "imblearn>=0.0",
    "isort>=8.0.1",
    "pandas>=3.0.2",
    "scikit-learn==1.8.0",
    "seaborn>=0.13.2",
    "spyder-kernels>=3.1.4",
]
